# fixtool

./: CMakeLists.txt  README.md
.circleci/: config.yml
src/: AVLTree.h  CMakeLists.txt  ManagedMemory.cc  ManagedMemory.h  OffsetPtr.h  SharedMemory.cc  SharedMemory.h
tests/: CMakeLists.txt  test-AVLTree.cc  test-ManagedMemory.cc  test-OffsetPtr.cc  test-SharedMemory.cc
